adding default templates adding index page and login

--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/web/index.xhtml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/web/index.xhtml
@@ -1,22 +1,24 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./templates/default_template.xhtml">
+                template="./templates/default_template.xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
+  
 
-    <ui:define name="top">
-        top
-    </ui:define>
+   
 
     <ui:define name="left">
-        left
+        left 4 
     </ui:define>
 
     <ui:define name="content">
-        content
+        content 4
     </ui:define>
 
     <ui:define name="bottom">
-        bottom
+        bottom 4
     </ui:define>
 
 </ui:composition>
