adding default templates adding index page and login

--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/web/login.xhtml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/web/login.xhtml
@@ -5,7 +5,7 @@
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         
-        <h:outputStylesheet library="css" name="css/loginStyle.css"/>
+        <h:outputStylesheet library="css" name="loginStyle.css"/>
         <h:outputStylesheet library="css" name="default.css"/>  
         <h:outputStylesheet library="css" name="cssLayout.css"/>
         <title>GesBank-Login</title>
