--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/web/client/MesComptes.xhtml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain&Lescouflair&Suy-war/web/client/MesComptes.xhtml
@@ -5,7 +5,10 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:p="http://primefaces.org/ui"  >
-    
+     
+    <ui:define name="meta-attr">
+     <f:attribute name="PageRole" value="Admin" />
+    </ui:define>
 
     <ui:define name="complementTitreEtH1">
         Mes Compte
