-changemment dans Entite , session beans -update interface -ajout dans les Management Beans

--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/admin/ListeComptes.xhtml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/admin/ListeComptes.xhtml
@@ -7,7 +7,7 @@
                 xmlns:p="http://primefaces.org/ui" >
 
     <ui:define name="meta-attr">
-        <f:attribute name="PageRole" value="Admin" />
+        <f:attribute name="PageRole" value="Administ" />
     </ui:define>
     
     <ui:define name="complementTitreEtH1">
