--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/client/MesComptes.xhtml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/client/MesComptes.xhtml
@@ -74,9 +74,9 @@
                             <f:facet name="header">
                                 <h:outputText value="Action"/>
                             </f:facet>
-                             <h:link class="lien" outcome="#{detailsComptesBeans.getActiontStringDetail(item.id)}" value="Details"/>
-                             <h:link class="lien" outcome="#{compteBancaireBeans.getActiontStringModif(item.id)}" value="Modifier"/>
-                             <h:link class="lien" outcome="#{detailsComptesBeans.getActiontStringTransaction(item.id)}" value="Depots/Retrait"/>
+                             <h:link class="lien" outcome="#{detailsComptesBeans.getActiontStringDetail(item.numeroCompte)}" value="Details"/>
+                             <h:link class="lien" outcome="#{clientTrasactionBancaireMBean.getActiontStringModif(item.numeroCompte)}" value="Modifier"/>
+                             <h:link class="lien" outcome="#{detailsComptesBeans.getActiontStringTransaction(item.numeroCompte)}" value="Depots/Retrait"/>
                             
 
                         </p:column>
