--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/client/transfertClient.xhtml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/client/transfertClient.xhtml
@@ -6,7 +6,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <ui:define name="meta-attr">
-      <f:attribute name="PageRole" value="Client" />
+      <f:attribute name="PageRole" value="ClientB" />
     </ui:define>
 
     <ui:define name="complementTitreEtH1">
