save points ------------------------ -enregistrer compte works

--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/admin/EnregistrerCompte.xhtml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/admin/EnregistrerCompte.xhtml
@@ -30,7 +30,7 @@
                     <h:outputLabel value="NumeroCompte:" for="numeroCompte" />
                     <h:inputText id="numeroCompte" value="#{clientTrasactionBancaireMBean.selectedcompteBancaire.numeroCompte}" title="NumeroCompte" />
                     <h:outputLabel value="ClientBanque:" for="clientBanque" />
-                    <h:selectOneMenu id="clientBanque" value="#{clientTrasactionBancaireMBean.selectedcompteBancaire.clientBanque}" title="ClientBanque" >
+                    <h:selectOneMenu id="clientBanque" value="#{clientTrasactionBancaireMBean.selectedcompteBancaire.clientBanque.nom} #{clientTrasactionBancaireMBean.selectedcompteBancaire.clientBanque.nom}" title="ClientBanque" >
                         <!-- TODO: update below reference to list of available items-->
                         <f:selectItems value="#{fixme}"/>
                     </h:selectOneMenu>
