--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/login.xhtml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/login.xhtml
@@ -36,7 +36,7 @@
                                 <h:outputText value="#{validationView.text}" />
 
                                 <h:outputLabel for="Password" value="Password:" style="font-weight:bold"/>                    
-                                <p:inputText id="Password" value="#{loginMBean.password}" label="Password" required="true"/>
+                                <p:password id="Password" value="#{loginMBean.password}" label="Password" required="true"/>
                                     
                                 <p:message for="Password" />
                                 <h:outputText value="#{validationView.integer}" />
