--- a/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/admin/EnregistrerCompte.xhtml
+++ b/TP_Final_JEE_GestionnaireDeCompteBancaires_Germain_Lescouflair_Suy-war/web/admin/EnregistrerCompte.xhtml
@@ -63,7 +63,7 @@
                     
                     
                     <p:commandButton id="back" value="Back" />  
-                    <p:commandButton id="update" value="Enregistrer" action="#{creerCompteMBean.creerCompte()}" /> 
+                    <p:commandButton id="update" ajax="false"  validateClient="true" value="Enregistrer" action="#{creerCompteMBean.creerCompte()}" /> 
                 </h:panelGrid>
             </h:form>
         </f:view>
